--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="h-screen flex flex-col justify-center bg">
         <div class="grid gap-8 items-start justify-center"> 
             <div class="relative">
-            <div class="absolute inset-0 bg-gradient-to-r from-[#7B1523] rounded-lg blur"></div>
+            <div class="absolute inset-0 bg-gradient-to-t from-red-500 to-red-900 rounded-lg blur"></div>
 
                 <div class="relative bg-black rounded-lg flex flex-col md:w-fit w-fit h-30 gap-4 mx-auto p-4 items-center">
-                    <h1 class="text-center text-red-500 text-xl">:p</h1>
+                    <h1 class="text-center text-red-500 text-xl">🍅</h1>
 
                     <form action="cadastro.js" method="POST" autocomplete="on" class="flex flex-col text-white items-center">
 
